{
  "version": 4,
  "terraform_version": "1.4.3",
  "serial": 104,
  "lineage": "994a2a39-8682-9fcf-2254-8dff0653358b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "webapp-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:406700265883:internet-gateway/igw-00d3833cfa3b1a499",
            "id": "igw-00d3833cfa3b1a499",
            "owner_id": "406700265883",
            "tags": {
              "Name": "Webapp-IGW"
            },
            "tags_all": {
              "Name": "Webapp-IGW"
            },
            "vpc_id": "vpc-01b28cc86c2102aac"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webapp-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:406700265883:loadbalancer/app/Webapp-LB/501a32b121b4c4a4",
            "arn_suffix": "app/Webapp-LB/501a32b121b4c4a4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Webapp-LB-1363396324.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:406700265883:loadbalancer/app/Webapp-LB/501a32b121b4c4a4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Webapp-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-004de8452ec4150b7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0173ab865d5ba957e"
              },
              {
                "subnet_id": "subnet-030f65fd002cd58e4"
              },
              {
                "subnet_id": "subnet-0916077424ede1cf5"
              }
            ],
            "subnets": [
              "subnet-0173ab865d5ba957e",
              "subnet-030f65fd002cd58e4",
              "subnet-0916077424ede1cf5"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-01b28cc86c2102aac",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.webapp-subnet-1a",
            "aws_subnet.webapp-subnet-1b",
            "aws_subnet.webapp-subnet-1c",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webapp-LB-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:406700265883:loadbalancer/app/Webapp-LB-1/1865acd9eb82ad7b",
            "arn_suffix": "app/Webapp-LB-1/1865acd9eb82ad7b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Webapp-LB-1-1735493984.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:406700265883:loadbalancer/app/Webapp-LB-1/1865acd9eb82ad7b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Webapp-LB-1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-004de8452ec4150b7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0173ab865d5ba957e"
              },
              {
                "subnet_id": "subnet-030f65fd002cd58e4"
              },
              {
                "subnet_id": "subnet-0916077424ede1cf5"
              }
            ],
            "subnets": [
              "subnet-0173ab865d5ba957e",
              "subnet-030f65fd002cd58e4",
              "subnet-0916077424ede1cf5"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-01b28cc86c2102aac",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.webapp-subnet-1a",
            "aws_subnet.webapp-subnet-1b",
            "aws_subnet.webapp-subnet-1c",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webapp-listener-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:406700265883:listener/app/Webapp-LB-1/1865acd9eb82ad7b/916d5b3b8f3c5bef",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:406700265883:targetgroup/webapp-TG-1/133d3969b81f2058",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:406700265883:listener/app/Webapp-LB-1/1865acd9eb82ad7b/916d5b3b8f3c5bef",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:406700265883:loadbalancer/app/Webapp-LB-1/1865acd9eb82ad7b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.webapp-LB-1",
            "aws_lb_target_group.webapp-TG-1",
            "aws_security_group.allow_ssh",
            "aws_subnet.webapp-subnet-1a",
            "aws_subnet.webapp-subnet-1b",
            "aws_subnet.webapp-subnet-1c",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webapp-TG-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:406700265883:targetgroup/webapp-TG-1/133d3969b81f2058",
            "arn_suffix": "targetgroup/webapp-TG-1/133d3969b81f2058",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:406700265883:targetgroup/webapp-TG-1/133d3969b81f2058",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webapp-TG-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01b28cc86c2102aac"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webapp-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:406700265883:route-table/rtb-0c3cab7beee24e479",
            "id": "rtb-0c3cab7beee24e479",
            "owner_id": "406700265883",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00d3833cfa3b1a499",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Webapp-RT"
            },
            "tags_all": {
              "Name": "Webapp-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b28cc86c2102aac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.webapp-IGW",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webapp-RT-asso-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1adb3deeccb1150",
            "route_table_id": "rtb-0c3cab7beee24e479",
            "subnet_id": "subnet-0173ab865d5ba957e"
          },
          "dependencies": [
            "aws_internet_gateway.webapp-IGW",
            "aws_route_table.webapp-RT",
            "aws_subnet.webapp-subnet-1a",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webapp-RT-asso-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c993f8c0020f74e5",
            "route_table_id": "rtb-0c3cab7beee24e479",
            "subnet_id": "subnet-0916077424ede1cf5"
          },
          "dependencies": [
            "aws_internet_gateway.webapp-IGW",
            "aws_route_table.webapp-RT",
            "aws_subnet.webapp-subnet-1b",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:406700265883:security-group/sg-004de8452ec4150b7",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004de8452ec4150b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "406700265883",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALLOW_SSH"
            },
            "tags_all": {
              "Name": "ALLOW_SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b28cc86c2102aac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webapp-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:406700265883:subnet/subnet-0173ab865d5ba957e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0173ab865d5ba957e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "406700265883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Webapp-subnet-1A"
            },
            "tags_all": {
              "Name": "Webapp-subnet-1A"
            },
            "vpc_id": "vpc-01b28cc86c2102aac"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webapp-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:406700265883:subnet/subnet-0916077424ede1cf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0916077424ede1cf5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "406700265883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Webapp-subnet-1B"
            },
            "tags_all": {
              "Name": "Webapp-subnet-1B"
            },
            "vpc_id": "vpc-01b28cc86c2102aac"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webapp-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:406700265883:subnet/subnet-030f65fd002cd58e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030f65fd002cd58e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "406700265883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Webapp-subnet-1C"
            },
            "tags_all": {
              "Name": "Webapp-subnet-1C"
            },
            "vpc_id": "vpc-01b28cc86c2102aac"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "webapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:406700265883:vpc/vpc-01b28cc86c2102aac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-035503a9c51f3e3ae",
            "default_route_table_id": "rtb-06424a488e2230b1b",
            "default_security_group_id": "sg-08c812f3774760750",
            "dhcp_options_id": "dopt-0283aa28b3c71e815",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01b28cc86c2102aac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06424a488e2230b1b",
            "owner_id": "406700265883",
            "tags": {
              "Name": "Webapp-VPC"
            },
            "tags_all": {
              "Name": "Webapp-VPC"
            }
          }
        }
      ]
    }
  ]
}